--- a/amazon_ec2_setup.html
+++ b/amazon_ec2_setup.html
@@ -159,7 +159,7 @@
               <tt>~/.profile)</tt>
             </p>
             <pre><code>#!/bin/sh
-            export EC2_URL="https://<ec2region>.ec2.amazonaws.com/"
+            export EC2_URL="https://<ec2region>.ec2.amazonaws.com/" # (e.g. <ec2region> = us-west-1)
             export EC2_ACCESS_KEY="AAAAAAAAAABBBBBB"
             export EC2_SECRET_KEY="NRLSKDM@$@$/4@$%%NNNSN"
             export EC2_PRIVATE_KEY="/path/to/pk-XXX.pem"
